[F-B] Coexion fornt registrar asistencia con back (FALTAN RELACIONES)